--- a/exercicios/ex023/ex023.html
+++ b/exercicios/ex023/ex023.html
@@ -12,6 +12,7 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
@@ -22,6 +23,8 @@
         td {
             border: 1px solid rgb(0, 0, 0);
             padding: 0px;
+            text-align: center;
+            vertical-align: middle;
         }
         td:hover {
             background-color: yellow;
